scss/modules/_events.scss
//////////////////
//
//	File: _events.scss
//	Description: Events module for upcoming meetups
//
//////////////////



/*----------  Events menu  ----------*/

.events-menu-holder {
	display: flex;
	-webkit-justify-content: center; /* Safari */
	justify-content:         center;
}

.events-menu {
	margin: 5rem 0;
	display: inline-block;
	list-style-type: none;

}

.events-menu__item {
	display: inline-block;
	margin: 0 2.5rem;
	font-weight: bold;

	&:nth-child(1) a:after {
		transform: translate(calc(100% + 5rem), 0);
	}

	&:nth-child(2) a:after {
		transform: translate(calc(-100% - 5rem), 0);
	}

	a {
		font-size: 2rem;
		color: $cl-border;
		transition: color 0.3s ease;

		&:after {
			content: "";
			display: block;
			border-bottom: 2px solid $cl-primary;
			width: 0px;
			transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
		}
	}

	&--active a {
		color: $cl-primary;
		padding-bottom: 2px;

		&:after {
			width: 100%;
			transform: translate(0px, 0px) !important;
		}
	}
}


.events {
	padding: 0 2rem;

	&:after {
		margin-left: 50%;
		left: -2rem;
		display: block;
		background-image: url('../images/ring-alt.svg');
		background-size: contain;
		content: "";
		width: 4rem;
		height: 4rem;
		opacity: 0;
		transform: scale(0);
		transition: all 0.2s ease;
	}

	&.loading {
		&:after {
			opacity: 1;
			transform: scale(1);
		}
	}
}

/*----------  Each event is an item  ----------*/

.events__item {
	margin: 0 auto 4rem auto;
	border-radius: 0.25rem;
	transform: scale(.95);
	max-height: 8rem;
	overflow: hidden;
	box-shadow: 0 3px 8px 1px rgba(0,0,0,0.1);
	background: white;
	text-align: left;
	max-width: 80rem;
	transition: transform 0.3s ease;

	p:last-child {
		margin-bottom: 0;
	}
}

.events__container {
	overflow: hidden;
	max-height: 0;
	transition: max-height 600ms ease;

	.events__item--active & {
		max-height: 200rem;
		transform: scale(1);
	}
}

.titlebar--events {
	position: relative;
	cursor: pointer;
	height: 8rem;
	background-color: $cl-primary;
	padding: 1.5rem 2rem 1.5rem 6rem;
	color: white;
	display: flex;
	flex-direction: row;
}

.cta-holder--events {
	height: 5rem;
	line-height: 5rem;
	vertical-align: top;
	align-self: flex-end;
	margin-left: auto;
}

.button--cta {
	display: inline-block;
	line-height: 3rem;
	padding: 0.5rem 3rem;
	// background-color: white;
	border: 2px solid $cl-white;
	border-radius: 4rem;
	cursor: pointer;
	color: $cl-white;
	font-weight: bold;
	transition-property: color, background, box-shadow;
	transition-duration: 300ms;

	&:hover,
	&:focus {
		color: $cl-primary;
		background: $cl-white;
		box-shadow: 0 3px 8px 1px rgba(0, 0, 0, 0.1);
	}
}

.rsvp-list-holder {
	padding: 0 4rem;
	margin-bottom: 2rem;
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
}

.rsvp-list-holder p {
	vertical-align: top;
	display: inline-block;
	margin: 0 1rem 0 0;
	line-height: 5rem;
	font-weight: bold;
	color: $cl-primary;
}

.rsvp-list {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: row;
	flex-direction: row;
	-webkit-justify-content: flex-end;
	justify-content: flex-end;
}

.rsvp-list__member {
	border-radius: 50%;
	display: inline-block;
	margin-right: 1rem;
	width: 5rem;
	height: 5rem;
	border: 0.25rem solid white;
	box-shadow: 0 3px 8px 1px rgba(0,0,0,0.1);
	background-size: cover;
	vertical-align: top;
	text-align: center;
	font-weight: bold;
	color: $cl-primary;
	line-height: 4.5rem;

	&:last-child {
		margin-right: 0;
	}
}

.description--events {
	padding: 2rem 4rem;
	overflow: hidden;
	max-height: 20rem;
	box-sizing: initial;
	position: relative;
	overflow: hidden;
	transition: max-height 600ms;

	&.expanded {
		max-height: 80rem;

		&:after {
			opacity: 0;
		}
	}

	&:after {
		content: "";
		display: block;
		bottom: 0;
		left: 0;
		position: absolute;
		width: 100%;
		height: 8rem;
		background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, white 90%);
		transition: opacity 0.2s ease;
	}
}

.hr {
	&--events {
		margin: 0rem 3rem 2rem 3rem;
		border: 0;
		border-bottom: 1px solid $cl-border;
		display: flex;
		justify-content: center;
	}

	&--expand {
		position: relative;

		&.expanded {

			&:after {
				transform: scale(0);
			}
		}

		&:after {
			content: 'Read more';
			display: block;
			position: absolute;
			left: calc(50% - 47px);
			top: -15px;
			padding: .3rem 1.5rem;
			cursor: pointer;
			color: $cl-dark-grey;
			font-weight: bold;
			font-size: 1.25rem;
			line-height: 2.5rem;
			border-radius: 4rem;
			background-color: $cl-light-grey;
			transform: scale(1);
			transition-property: transform;
			transition-duration: 300ms;
		}
	}
}

.date--events {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	text-align: center;
	position: absolute;
	top: -0.5rem;
	left: -4.5rem;
	color: $cl-primary;
	line-height: 1;
	font-weight: bold;
	width: 9rem;
	height: 9rem;
	background-color: $cl-white;
	border-radius: 200px;
	box-shadow: 0 0 0 3px $cl-primary;
}

.date__day {
	text-align: center;
	font-size: 2.4rem;
}

.title--events {
	display: inline-block;
	vertical-align: top;
	line-height: 5rem;
	font-size: 2rem;
}

.date__month {
	font-size: 1.4rem;
	text-align: center;
}

